--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ body{
     font-size: 16px;
 }
 header{
-    width: 100%;
     position: fixed;
     z-index: 10;
 }
@@ -13,9 +12,10 @@ header #content{
     display: flex;
 }
 
+
 .nav-bar ul{
     display: flex;
-    align-items: flex-end;
+    justify-content: flex-end;
     list-style-type: none;
 }
 
