--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,16 @@ header ul li{
     padding: 0 1rem;
 }
 
+header ul li a{
+    text-decoration: none;
+    color: black;
+    transition: all 0.3s ease 0s;
+}
+
+header ul li a:hover{
+    color: grey;
+}
+
 #logo{
     font-size: 1.7rem;
     margin-right: auto;
@@ -36,14 +46,15 @@ header ul li{
     padding: 5.5rem 25rem;
     width: fit-content;
     text-align: center;
-    background-color: deepskyblue;
+    background-color:#3250A5;
+    color: white;
 }
 
 #about img{
     width: 170px;
     height: 170px;
     border-radius: 50%;
-    border: 1px solid black;
+    border: 1px solid white;
 }
 
 #about p{
