--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,8 @@ header ul li a{
 }
 
 header ul li a:hover{
-    color: grey;
+    color: 121D3B;
+    font-size: 1.1rem;
 }
 
 #logo{
@@ -113,14 +114,13 @@ header ul li a:hover{
 }
 
 #contact{
-    padding-top: 3rem;
     text-align: center;
     position: relative;
 }
 
-#contact img{
-    left: 14rem;
-    width: 50%;
+#bg{
+    width:100%;
+    height: 105%;
     position: relative;
 }
 
@@ -133,12 +133,45 @@ header ul li a:hover{
     position: absolute;
     background-color:253C7A;
     top: 12rem;
-    left: 27rem;
-    padding: 3rem 5rem;
+    left: 32%;
+    padding: 2rem 7rem;
     line-height: 1.6rem;
     color: white;
+    font-size: large;
+    letter-spacing: 0.1rem;
+}
+#contact-info ul{
+    display: inline-flex;
 }
 
+#contact-info ul li{
+    padding-right: 1rem;
+}
+
+#contact-info img{
+    width: 70%;
+}
+
+#email-popup{
+    position: absolute;
+    background-color:253C7A;
+    left: 37%;
+    color: white;
+    font-size: large;
+    padding: 1.5rem 5rem;
+    line-height: 1.3rem;
+    top: 28rem;
+    display: none;
+}
+
+footer{
+    display: flex;
+    font-size: 0.7rem;
+    justify-content: space-between;
+    padding: 0.5rem 1.15rem;
+    color: white;
+    background-color:#3250A5;
+}
 
 
 /* Color palette: 
